--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WhatsApp Web</title>
+    <title>Electron QR Code Example</title>
 </head>
 
 <body>
-    <div id="qrcode-container"></div>
+    <div id="qrcode"></div>
+
     <script src="./app.js"></script>
-    <script src="whatsapp-web.js"></script>
 </body>
 
 </html>
